# salary-estimator

./: .env.example  .gitignore  README.md  pyproject.toml
data/: salary_benchmarks.json
src/salary_estimator/: __init__.py  app.py  graph.py  main.py  state.py
src/salary_estimator/models/: __init__.py  estimation.py  profile.py
src/salary_estimator/nodes/: __init__.py  knowledge_base.py  profile_parser.py  query_generator.py  salary_analyzer.py  web_searcher.py
src/salary_estimator/utils/: __init__.py  config.py
tests/: __init__.py  test_graph.py
