[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salary-estimator"
version = "0.1.0"
description = "LangGraph-based AI agent for LinkedIn profile salary estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "google-api-python-client>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
salary-estimator = "salary_estimator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/salary_estimator"]
